# organize

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
organize_files/: __init__.py  categories.py  cli.py  organizer.py
tests/: test_organizer.py
