[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "organize-files"
version = "1.0.0"
description = "Move files into subfolders by extension — from the command line."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
organize-files = "organize_files.cli:main"

[project.urls]
Repository = "https://github.com/DevOPhost/organize"
"Bug Tracker" = "https://github.com/DevOPhost/organize/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["organize_files*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
